--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:report": "npm test && npm run report",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"**/*.ts\"",
+    "build": "tsc",
     "report": "allure generate --clean allure-results -o allure-report && allure open allure-report"
   },
   "engines": {
@@ -28,10 +29,11 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@wdio/allure-reporter": "^8.43.0",
-    "@wdio/cli": "^8.32.3",
-    "@wdio/local-runner": "^8.32.3",
-    "@wdio/mocha-framework": "^8.32.3",
-    "@wdio/spec-reporter": "^8.32.2",
+    "@wdio/cli": "^9.13.0",
+    "@wdio/local-runner": "^9.14.0",
+    "@wdio/mocha-framework": "^9.14.0",
+    "@wdio/spec-reporter": "^9.14.0",
+    "@wdio/visual-service": "^8.0.1",
     "allure-commandline": "^2.34.0",
     "chromedriver": "^135.0.0",
     "eslint": "^8.56.0",
@@ -40,7 +42,10 @@
     "prettier": "^3.2.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "typescript": "^5.8.3",
     "wdio-chromedriver-service": "^8.1.1"
+  },
+  "dependencies": {
+    "@web/test-runner-visual-regression": "^0.10.0"
   }
 }
